--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <!--Google Fonts CDN-->
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <meta charset="utf-8">
-    <title>TobyTee</title>
+    <link rel="icon" href="/static/favicon.ico">
+    <title>Toby Tee</title>
   </head>
   <body>
     <div id="app"></div>
