Added Meta data + layout changes
Added title, author, description, keywords meta data. Also made adjustments to margins + padding in header and home page.

--- a/index.html
+++ b/index.html
@@ -3,18 +3,28 @@
   <head>
     <!--Font Awesome CDN (Social Media Icons)-->
     <script src="https://use.fontawesome.com/c455381b60.js"></script>
+    
     <!--Bootstrap CSS/JQuery/JS CDN-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
     <!--Google Fonts CDN-->
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-    <meta charset="utf-8">
     <link rel="icon" href="/static/favicon.ico">
+
+    <!--Meta Data -->
+    <meta charset="utf-8">
+    <meta name="author" content="Toby Tee">
+    <meta name="title" content="Toby Tee">
+    <meta name="keywords" content="Toby,Tee,TobyTee,Portfolio,Blog,Code,Projects,GitHub">
+    <meta name="description" content="Toby Tee's personal portfolio website. This website serves as a place where I can host and display some of my personal projects, as well as keep a small learning focused blog.">
     <title>Toby Tee</title>
+
   </head>
+
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
+
 </html>
