Compressed images + small bug fixes
Fixed naming on emptyComponent class. Renamed me.jpg to fix loading error on web server. Added .htaccess for future use. Added viewport meta tag + changed meta description.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 
     <!--Meta Data -->
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Toby Tee">
     <meta name="title" content="Toby Tee">
-    <meta name="keywords" content="Toby,Tee,TobyTee,Portfolio,Blog,Code,Projects,GitHub">
-    <meta name="description" content="Toby Tee's personal portfolio website. This website serves as a place where I can host and display some of my personal projects, as well as keep a small learning focused blog.">
+    <meta name="keywords" content="Toby,Tee,TobyTee,Toby Tee,Portfolio,webdeveloper,software developer,Code,Projects,GitHub,CV,">
+    <meta name="description" content="Toby Tee's personal portfolio website. This website serves as a centralised hub that I can use to display my personal web/software based development projects that I have created in my spare time.">
     <title>Toby Tee</title>
 
   </head>
